<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    style="@style/AppTheme"
    >
    <!--  Header -->
    <include layout="@layout/_activity_header" />

    <!--  main section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >

        <!--  Navbar left  -->
        <include layout="@layout/_activity_left_navbar" />

        <!--    Decklist-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="10dp"
            >
            <!-- Deck 1  -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                >
                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"

                    android:contentDescription="@string/icone_de_deck"
                    android:background="@drawable/decks_icon_700x700"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deck_1"
                    />
            </LinearLayout>
            <!-- Deck 2  -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                >
                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"

                    android:contentDescription="@string/icone_de_deck"
                    android:background="@drawable/decks_icon_700x700"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deck_2"
                    />
            </LinearLayout>

            <!-- add deck  -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                >
                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"

                    android:contentDescription="@string/icone_de_deck_add"
                    android:background="@drawable/add_decks_icon_700x700"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_a_deck"
                    />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>